[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/editor/sounds/click2.wav" type="AudioStream" id=1]
[ext_resource path="res://scenes/editor/sounds/hover.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/editor/window.gd" type="Script" id=3]
[ext_resource path="res://scenes/editor/assets/window_close_hover.png" type="Texture" id=4]
[ext_resource path="res://scenes/editor/assets/window_close.png" type="Texture" id=5]
[ext_resource path="res://scenes/editor/assets/window.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/delfino.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/editor/property_type_scenes/PoolStringArray/base/DialogueSaveButton.gd" type="Script" id=8]
[ext_resource path="res://scenes/editor/window/CancelButton.gd" type="Script" id=9]
[ext_resource path="res://assets/styles/ButtonStyleDisabled.tres" type="StyleBox" id=10]
[ext_resource path="res://scenes/actors/objects/toad/body_preview.png" type="Texture" id=11]
[ext_resource path="res://scenes/actors/objects/toad/head_preview.png" type="Texture" id=12]
[ext_resource path="res://scenes/editor/property_type_scenes/PoolStringArray/base/facing_dir.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 56
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=17]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.0705882, 0, 0.231373, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0.0470588, 0.317647, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.112, 0.1432, 0.32, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="DynamicFont" id=13]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=18]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=16]
size = 48
font_data = ExtResource( 7 )

[node name="DialogueInput" type="NinePatchRect"]
margin_left = 165.0
margin_top = 110.0
margin_right = 1365.0
margin_bottom = 612.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 0
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 108, 290 )
patch_margin_left = 40
patch_margin_top = 110
patch_margin_right = 40
patch_margin_bottom = 40
script = ExtResource( 3 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 24.2632
margin_right = 456.0
margin_bottom = 102.263
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "Text"
text = "Text"

[node name="CloseButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -170.0
margin_top = 14.0
margin_bottom = 81.0
rect_scale = Vector2( 0.95, 0.95 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="HoverSound" type="AudioStreamPlayer" parent="CloseButton"]
stream = ExtResource( 2 )
volume_db = -10.0
bus = "Sounds"

[node name="ClickSound" type="AudioStreamPlayer" parent="CloseButton"]
stream = ExtResource( 1 )
volume_db = -10.0
bus = "Sounds"

[node name="Contents" type="Control" parent="."]
anchor_bottom = 0.06
margin_left = 17.4044
margin_top = 104.0
margin_right = 1036.4
margin_bottom = 498.0

[node name="HBoxContainer" type="HBoxContainer" parent="Contents"]
margin_left = 18.0
margin_top = 158.0
margin_right = 1145.0
margin_bottom = 238.0
grow_horizontal = 2

[node name="Back" type="Button" parent="Contents/HBoxContainer"]
margin_right = 96.0
margin_bottom = 80.0
rect_min_size = Vector2( 96, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 17 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 15 )
disabled = true
enabled_focus_mode = 0
text = "Back"

[node name="Next" type="Button" parent="Contents/HBoxContainer"]
margin_left = 100.0
margin_right = 196.0
margin_bottom = 80.0
rect_min_size = Vector2( 96, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 17 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0
text = "Next"

[node name="Padding" type="Control" parent="Contents/HBoxContainer"]
margin_left = 200.0
margin_right = 257.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="RemoteTag" type="LineEdit" parent="Contents/HBoxContainer"]
margin_left = 261.0
margin_right = 485.0
margin_bottom = 80.0
rect_min_size = Vector2( 224, 0 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.188235, 0.258824, 0.494118, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 12 )
align = 1
placeholder_text = "Followup Tag"

[node name="Padding3" type="Control" parent="Contents/HBoxContainer"]
margin_left = 489.0
margin_right = 547.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Expression" type="Button" parent="Contents/HBoxContainer"]
margin_left = 551.0
margin_right = 631.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0

[node name="Sprite" type="Sprite" parent="Contents/HBoxContainer/Expression"]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 12 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="IndexDisplay" type="Label" parent="Contents/HBoxContainer"]
margin_left = 635.0
margin_top = 22.0
margin_right = 704.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 18 )
text = "0/10"

[node name="Action" type="Button" parent="Contents/HBoxContainer"]
margin_left = 708.0
margin_right = 788.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0

[node name="Sprite" type="Sprite" parent="Contents/HBoxContainer/Action"]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 11 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Padding2" type="Control" parent="Contents/HBoxContainer"]
margin_left = 792.0
margin_right = 849.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -899.904, -37 )
size_flags_horizontal = 3

[node name="FacingDir" type="Button" parent="Contents/HBoxContainer"]
visible = false
margin_left = 734.0
margin_right = 889.0
margin_bottom = 80.0
rect_min_size = Vector2( 96, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 17 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0
text = "Face Left"
script = ExtResource( 13 )

[node name="HoverSound" type="AudioStreamPlayer" parent="Contents/HBoxContainer/FacingDir"]
stream = ExtResource( 2 )
volume_db = -10.0
bus = "Sounds"

[node name="ClickSound" type="AudioStreamPlayer" parent="Contents/HBoxContainer/FacingDir"]
stream = ExtResource( 1 )
volume_db = -10.0
bus = "Sounds"

[node name="Padding4" type="Control" parent="Contents/HBoxContainer"]
margin_left = 853.0
margin_right = 911.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Add" type="Button" parent="Contents/HBoxContainer"]
margin_left = 915.0
margin_right = 995.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 17 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0
text = "Add"

[node name="Remove" type="Button" parent="Contents/HBoxContainer"]
margin_left = 999.0
margin_right = 1127.0
margin_bottom = 80.0
rect_min_size = Vector2( 128, 0 )
focus_mode = 0
custom_fonts/font = SubResource( 17 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0
text = "Remove"

[node name="TextEdit" type="TextEdit" parent="Contents"]
margin_left = 18.0
margin_top = 18.0
margin_right = 1142.0
margin_bottom = 148.0
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.188235, 0.258824, 0.494118, 1 )
custom_colors/completion_font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 12 )
context_menu_enabled = false
v_scroll_speed = 0.0
wrap_enabled = true

[node name="SaveButton" type="Button" parent="Contents"]
margin_left = 668.0
margin_top = 261.0
margin_right = 1052.0
margin_bottom = 351.0
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 15 )
shortcut_in_tooltip = false
action_mode = 0
text = "Save"
script = ExtResource( 8 )

[node name="HoverSound" type="AudioStreamPlayer" parent="Contents/SaveButton"]
stream = ExtResource( 2 )
volume_db = -10.0
bus = "Sounds"

[node name="ClickSound" type="AudioStreamPlayer" parent="Contents/SaveButton"]
stream = ExtResource( 1 )
volume_db = -10.0
bus = "Sounds"

[node name="CancelButton" type="Button" parent="Contents"]
margin_left = 96.0
margin_top = 261.0
margin_right = 480.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 15 )
shortcut_in_tooltip = false
action_mode = 0
text = "Cancel"
script = ExtResource( 9 )

[node name="HoverSound" type="AudioStreamPlayer" parent="Contents/CancelButton"]
stream = ExtResource( 2 )
volume_db = -10.0
bus = "Sounds"

[node name="ClickSound" type="AudioStreamPlayer" parent="Contents/CancelButton"]
stream = ExtResource( 1 )
volume_db = -10.0
bus = "Sounds"

[node name="ScrollContainer" type="ScrollContainer" parent="Contents"]
margin_right = 12.0
margin_bottom = 12.0

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Contents/HBoxContainer/Back" to="Contents/SaveButton" method="change_page" flags=3 binds= [ -1 ]]
[connection signal="pressed" from="Contents/HBoxContainer/Back" to="Contents/SaveButton" method="save_page"]
[connection signal="pressed" from="Contents/HBoxContainer/Next" to="Contents/SaveButton" method="change_page" flags=3 binds= [ 1 ]]
[connection signal="pressed" from="Contents/HBoxContainer/Next" to="Contents/SaveButton" method="save_page"]
[connection signal="text_changed" from="Contents/HBoxContainer/RemoteTag" to="Contents/SaveButton" method="save_page"]
[connection signal="pressed" from="Contents/HBoxContainer/Expression" to="Contents/SaveButton" method="cycle_expression"]
[connection signal="pressed" from="Contents/HBoxContainer/Action" to="Contents/SaveButton" method="cycle_action"]
[connection signal="pressed" from="Contents/HBoxContainer/Add" to="Contents/SaveButton" method="add_page" flags=3]
[connection signal="pressed" from="Contents/HBoxContainer/Add" to="Contents/SaveButton" method="save_page"]
[connection signal="pressed" from="Contents/HBoxContainer/Remove" to="Contents/SaveButton" method="remove_page"]
[connection signal="text_changed" from="Contents/TextEdit" to="Contents/SaveButton" method="save_page"]
